fix issue with visited link in header being illegible

--- a/iip_smr_web_app/static/iip_search_app/css/general2.css
+++ b/iip_smr_web_app/static/iip_search_app/css/general2.css
@@ -162,7 +162,7 @@ ul {
 	} */
 a:visited {
 	text-decoration:underline;
-	color:#476757;
+	/* color:#476757; */
 	}
 a:hover {
 	text-decoration:underline;
